--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,19 @@ li {
     padding: 10px 0px;
 }
 
+button {
+    cursor: pointer;
+    border-radius: 0.375rem;
+    background-color: rgb(0 0 0 / 1);
+    padding: 0.5rem 1rem;
+    font-weight: 600;
+    color: rgb(255 255 255 / 1);
+    --tw-shadow: ;
+    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+    box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 #0000000d;
+    width: 100%;
+}
+
 #iframe {
     height: 100vh;
 }
@@ -24,8 +37,20 @@ li {
 #footer {
     border-top: 1px solid grey; 
     margin-top: 20px; 
-    padding: 20px 0px 400px 0px; 
+    padding: 20px 0px 600px 0px; 
     box-shadow: grey 0px -1px 3px 0px;
+}
+
+#address {
+    text-align: center;
+}
+
+#mintButton {
+    display: none;
+}
+
+.hidden {
+display: none !important;
 }
 
 .footer-col {
@@ -54,7 +79,31 @@ li {
     box-sizing: border-box; 
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 8px; 
+}
+
+.border-right {
+    border-right: 1px solid black;
+}
+
+.text-large {
+    font-size: 1.125rem;
+    text-align: center; 
+}
+
 @media (max-width: 689px) {
+    button {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    #footer {
+        padding: 10px 0px 1000px 0px;
+    }
+
     .footer-col {
         width: 100%; 
         float: none;
