--- a/src/index.css
+++ b/src/index.css
@@ -1,111 +1,21 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-    font-weight: bold;
-    text-decoration: underline;
-    color: black;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 li {
-    padding: 10px 0px;
-}
-
-button {
-    cursor: pointer;
-    border-radius: 0.375rem;
-    background-color: rgb(0 0 0 / 1);
-    padding: 0.5rem 1rem;
-    font-weight: 600;
-    color: rgb(255 255 255 / 1);
-    --tw-shadow: ;
-    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-    box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 #0000000d;
-    width: 100%;
-}
-
-#iframe {
-    height: 100vh;
-}
-
-#footer {
-    border-top: 1px solid grey; 
-    margin-top: 20px; 
-    padding: 20px 0px 600px 0px; 
-    box-shadow: grey 0px -1px 3px 0px;
-}
-
-#address {
-    text-align: center;
-}
-
-#mintButton {
-    display: none;
-}
-
-.hidden {
-display: none !important;
-}
-
-.footer-col {
-    width: 47%; 
-    float: left;
-}
-
-.footer-col::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.footer-heading {
-    text-align: center;
-}
-
-.vote-item {
-    float: left;
-    width: 48%; 
-    margin: 1%; 
-    padding: 20px; 
-    border: 1px solid grey; 
-    border-radius: 10px; 
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
-    box-sizing: border-box; 
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 8px; 
-}
-
-.border-right {
-    border-right: 1px solid black;
-}
-
-.text-large {
-    font-size: 1.125rem;
-    text-align: center; 
-}
-
-@media (max-width: 689px) {
-    button {
-        width: 80%;
-        margin: 0 auto;
-    }
-
-    #footer {
-        padding: 10px 0px 1000px 0px;
-    }
-
-    .footer-col {
-        width: 100%; 
-        float: none;
-    }
+  margin-top: 6px;
 }
